codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_picker_wide.snap
---
source: tui/src/keymap_setup.rs
expression: "render_picker(params, 120)"
---
                                                                                                                        
  Keymap                                                                                                                
  All configurable shortcuts.                                                                                           
  91 actions, 0 customized, 1 unbound.                                                                                  
                                                                                                                        
  [All]  Common  Customized (0)  Unbound (1)  App  Composer  Editor  Vim  Navigation  Approval                          
                                                                                                                        
  Type to search shortcuts                                                                                              
› Global         Open Transcript                ctrl-t                                                                  
  Global         Open External Editor           ctrl-g                                                                  
  Global         Copy                           ctrl-o                                                                  
  Global       - Toggle Vim Mode                unbound                                                                 
  Chat           Edit Previous Message          esc                                                                     
  Chat           Confirm Edit Previous Message  enter                                                                   
  Composer       Submit                         enter                                                                   
  Composer       Queue                          tab                                                                     
                                                                                                                        
  left/right group · enter edit shortcut · * custom · - unbound · esc close
